# appretro

./: CMakeLists.txt  README.md  vcpkg.json
include/appretro/: api.h  config.h
include/appretro/api/: export.h  image_layer.h  layer.h  layer_group.h  map.h  object.h  object_group.h  project.h  tile_layer.h  unknown.h
src/appretro/: CMakeLists.txt
src/appretro/api/: CMakeLists.txt  detail.h  layer.cpp  layer_group.cpp  map.cpp  object.cpp  object_group.cpp  pch.cpp  pch.h  project.cpp
src/appretro/engine/: CMakeLists.txt  command_line_info.h  engine.cpp  engine.h  main.cpp  pch.h
